Limpieza de codigos